--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         </nav>
     </header>
 
-    <main class = "main">
+    <div class = "topSection">
         <section class="frontPage">
             <img class = "cloud" src="/images/clouds.png" alt="clouds" width="80%" height="auto">
             <img class = "boat" src="/images/boat.png" alt="boat" width = "80%" height="auto">
-            <img class = "sea" src="/images/sea.png" alt="" width = "100%" height="auto">
+            <img class = "sea" src="/images/sea.png" alt="sea" width = "100%" height="auto">
+            <img class = "wheel" src="/images/wheel.png" alt="weel" width = "10%" height = "auto">
 
             <img class = "linkBar" src="/images/linkBar.png" alt="linkBar" width = "30%" height="auto">
 
@@ -40,13 +41,17 @@
                 <h1 class = "wish">Hey !..</h1>
                 <h1 class = "autoSpell">I'm <span id = "autoType"></span></h1>
             </div>
-            <div class="update">@Created 2024</div>
+            <div class="update"><span class = "dull" id = "lastUpdated"></span></div>
+            <div class="gmail">pravinsubramaniyam<span class = "dark">@gmail.com</span></div>
         </section>
+    </div>
 
+    <main class = "main">
         <section class = "about">
-
+            <div class="intro">
+                
+            </div>
         </section>
-
     </main>
     <footer>
 
