--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div class = "topSection">
         <section class="frontPage">
             <img class = "cloud" src="/images/clouds.png" alt="clouds" width="80%" height="auto">
-            <img class = "boat" src="/images/boat.png" alt="boat" width = "80%" height="auto">
+            <img class = "boat" src="images/boat.png" alt="boat" width = "80%" height="auto">
             <img class = "sea" src="/images/sea.png" alt="sea" width = "100%" height="auto">
             <img class = "wheel" src="/images/wheel.png" alt="weel" width = "10%" height = "auto">
 
-            <img class = "linkBar" src="/images/linkBar.png" alt="linkBar" width = "30%" height="auto">
+            <img class = "linkBar" src="images/linkBar.png" alt="linkBar" width = "30%" height="auto">
 
             <div class="container">
                 <h1 class = "wish">Hey !..</h1>
