front animation added

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <main class = "main">
         <section class = "about">
-            <div class="intro">
-                
-            </div>
+            <img  class = "anchor" src="/images/anchor.png" alt="" width = "20%" height = "auto">
+        </section>
+        <section class = "profile">
         </section>
     </main>
     <footer>
