--- a/index.html
+++ b/index.html
@@ -47,11 +47,65 @@
     </div>
 
     <main class = "main">
-        <section class = "about">
-            <img  class = "anchor" src="/images/anchor.png" alt="" width = "20%" height = "auto">
+        <section class="about">
+            <div class = "top">
+                <img src="/images/fish.png" alt="sea animal" width = "20%" height = "auto">
+            </div>
+
+            <div class = "left">
+                <img class = "octopus" src="/images/actopus.png" alt="sea animal" width = "40%" height = "auto">
+            </div>
+
+            <div class = "content">
+                <img  class = "myPhoto" src="/images/Profile.jpg" alt="profile pic" width = "80%" height = "auto">
+                <p class = "myPara">Hey !<br><br> I am a final-year BTech student with a strong foundation in computer science and engineering. My expertise lies in programming languages such as C++, where I have honed my skills in algorithm design and data structures. Additionally, I am proficient in web development technologies, including Html,Css and JavaScript, allowing me to create dynamic and responsive web applications.
+                <br><br>I'm
+                excited to bring my knowledge and energy to a
+                Organization. Looking for a dynamic position where I can
+                use my academic background, pick the brains of seasoned
+                experts, and actively support the company's expansion.</p>
+            </div>
+            <div class = "right">
+                <img class = "shark" src="/images/underFish.png" alt="" width = "60%"> 
+                <img class = "octopus" src="/images/actopus.png" alt="sea animal" width = "50%" height = "auto">
+            </div>
+            <div class = "skillBar">
+                <div class="skillSet">
+                    <ul class = "skillList">
+                        <li><img src="/images/skillIcons/c.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/html.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/cpp1.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/css.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/git.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/js.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="/images/skillIcons/github.png" alt="" width = "40%" height = "auto"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="lineBar">
+                <div class="line"></div>
+            </div>
         </section>
-        <section class = "profile">
+
+        <section class="profiles">
+            <div class="profileEnvironment">
+                <h1>Profiles</h1>
+                <div class="profileLinks">
+                    <a href="#"><img src="/images/linkIcons/leetcode.png" alt="" width = "10%"></a>
+                    <a href="#"><img src="/images/linkIcons/linkedin.png" alt="" width = "10%"></a>
+                    <a href="#"><img src="/images/linkIcons/codechef.759x1024.png" alt="" width = "10%"></a>
+                    <a href=""><img src="/images/linkIcons/github.png" alt="" width = "10%"></a>
+                    <a href=""><img src="/images/linkIcons/discord.png" alt="" width = "10%"></a>
+                    <a href=""><img src="/images/linkIcons/instagram.png" alt="" width = "10%"></a>
+                </div>
+            </div>
         </section>
+
+        <section class="project">
+
+        </section>
+
+
     </main>
     <footer>
 
