--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="icon" href="/images/favicon/favicon-32x32.png">
     <link rel = "stylesheet" href = "css/style.css">
     <script defer src="https://kit.fontawesome.com/e0c5254d51.js" crossorigin="anonymous"></script>
-    <script defer src = "script/main.js"></script>
+    <script type = "module" src = "script/main.js"></script>
     <script defer src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -20,8 +21,8 @@
             <ul class = "menuItems">
                 <li class = "hideMenu"><span class="material-symbols-outlined">close</span></li>
                 <li><a href="">About Me</a></li>
-                <li><a href="">Projects</a></li>
                 <li><a href="">Profiles</a></li>
+                <li><a href="">Projects</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
 
@@ -57,7 +58,7 @@
             </div>
 
             <div class = "content">
-                <img  class = "myPhoto" src="/images/Profile.jpg" alt="profile pic" width = "80%" height = "auto">
+                <img  class = "myPhoto" src="/images/profiley.jpg" alt="profile pic" width = "80%" height = "auto">
                 <p class = "myPara">Hey !<br><br> I am a final-year BTech student with a strong foundation in computer science and engineering. My expertise lies in programming languages such as C++, where I have honed my skills in algorithm design and data structures. Additionally, I am proficient in web development technologies, including Html,Css and JavaScript, allowing me to create dynamic and responsive web applications.
                 <br><br>I'm
                 excited to bring my knowledge and energy to a
@@ -91,24 +92,116 @@
             <div class="profileEnvironment">
                 <h1>Profiles</h1>
                 <div class="profileLinks">
-                    <a href="#"><img src="/images/linkIcons/leetcode.png" alt="" width = "10%"></a>
-                    <a href="#"><img src="/images/linkIcons/linkedin.png" alt="" width = "10%"></a>
-                    <a href="#"><img src="/images/linkIcons/codechef.759x1024.png" alt="" width = "10%"></a>
-                    <a href=""><img src="/images/linkIcons/github.png" alt="" width = "10%"></a>
-                    <a href=""><img src="/images/linkIcons/discord.png" alt="" width = "10%"></a>
-                    <a href=""><img src="/images/linkIcons/instagram.png" alt="" width = "10%"></a>
+                    <div class="one linkWrap">
+                        <img src="/images/linkIcons/leetcode.png" alt="" width = "10%">
+                        <a href="">Leetcode</a>
+                    </div>
+                    <div class="two linkWrap">
+                        <img src="/images/linkIcons/linkedin.png" alt="" width = "10%">
+                        <a href="">linkedin</a>
+                    </div>
+
+                    <div class="three linkWrap">
+                        <img src="/images/linkIcons/codechef.759x1024.png" alt="" width = "10%">
+                        <a href="">Codechef</a>
+                    </div>
+                    <div class="four linkWrap">
+                        <img src="/images/linkIcons/github.png" alt="" width = "10%">
+                        <a href="">Github</a>
+                    </div>
+                    <div class="five linkWrap">
+                        <img src="/images/linkIcons/discord.png" alt="" width = "10%">
+                        <a href="">Discord</a>
+                    </div>
+                    <div class="six linkWrap">
+                        <img src="/images/linkIcons/instagram.png" alt="" width = "10%">
+                        <a href="">Instagram</a>
+                    </div>
+                </div>
+
+                <div class="resume">
+                    <div class="mycv">
+                        <a href="" class = "cvButton">Resume <img class = "downloadIcon" src="/images/icons/download.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="project">
+            <h1>Projects</h1>
+            <div class="listItems">
+                <ul>
+                    <li class = "firstProject">AgriCart</li>
+                    <li class = "secondProject">Agroculture</li>
+                    <li class = "thirdProject">Malwar analysis tool</li>
+                </ul>
+            </div>
+            <div class="display">
+                <div class="laptop">
+                    <div class="screen">
+                        <img src="/images/project/agroCart/home.PNG" alt="" width = "60%">
+                    </div>
+                </div>
+            </div>
+            <div class="projectContent">
+                <div class="details">
+                    <div class = "HomeDetails">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, et!
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, et!
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, et!
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, et!
+                    </div>
+                </div>
+            </div>
 
         </section>
 
+        <section class="contact">
+            <h1>Contact Me</h1>
+            <div class="contactEnvinonment">
+                <!-- <form class = "form" action="submit" method = "get">
+                    <div class = "formWrapper">
+                        <label for="name">Name </label>
+                        <input id = "name" type="text" required>
+                    </div>
+                    <div class = "formWrapper">
+                        <label for="gmail">Gmail</label>
+                        <input id = "gmail" type="text" required>
+                    </div>
+                    <div class = "formWrapper">
+                        <label for="mobileNumber">Phone No</label>
+                        <input id ="mobileNumber" type="text"  required>
+                    </div>
+                    <div class = "formWrapper">
+                        <label for="message">Message</label>
+                        <textarea name="Message" id="message" cols="20" rows="5"></textarea>
+                    </div>
+
+                    <div class = "formWrapper">
+                        <button type = "submit">Submit</button>
+                        <button type = "reset">Reset</button>
+                    </div>
+
+                </form> -->
+            </div>
+        </section>
 
     </main>
-    <footer>
-
+    <footer class = "footer">
+        <p>@2024 Designed and Developed By <span class = "dark"> PraveenSubramaniyam.</span></p>
+        <div class="follow">
+            <h4>Follow me @</h4>
+            <ul>
+                <li><a href=""><img src="/images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a></li>
+                <li><a href=""><img src="/images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
