--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="icon" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" href="images/favicon/favicon-32x32.png">
     <link rel = "stylesheet" href = "css/style.css">
     <script defer src="https://kit.fontawesome.com/e0c5254d51.js" crossorigin="anonymous"></script>
     <script type = "module" src = "script/main.js"></script>
