image file path updated

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <div class = "topSection">
         <section class="frontPage">
-            <img class = "cloud" src="/images/clouds.png" alt="clouds" width="80%" height="auto">
-            <img class = "boat" src="/images/boat.png" alt="boat" width = "80%" height="auto">
-            <img class = "sea" src="/images/sea.png" alt="sea" width = "100%" height="auto">
-            <img class = "wheel" src="/images/wheel.png" alt="weel" width = "10%" height = "auto">
+            <img class = "cloud" src="images/clouds.png" alt="clouds" width="80%" height="auto">
+            <img class = "boat" src="images/boat.png" alt="boat" width = "80%" height="auto">
+            <img class = "sea" src="images/sea.png" alt="sea" width = "100%" height="auto">
+            <img class = "wheel" src="images/wheel.png" alt="weel" width = "10%" height = "auto">
 
             <img class = "linkBar" src="images/linkBar.png" alt="linkBar" width = "30%" height="auto">
 
@@ -50,15 +50,15 @@
     <main class = "main">
         <section class="about">
             <div class = "top">
-                <img src="/images/fish.png" alt="sea animal" width = "20%" height = "auto">
+                <img src="images/fish.png" alt="sea animal" width = "20%" height = "auto">
             </div>
 
             <div class = "left">
-                <img class = "octopus" src="/images/actopus.png" alt="sea animal" width = "40%" height = "auto">
+                <img class = "octopus" src="images/actopus.png" alt="sea animal" width = "40%" height = "auto">
             </div>
 
             <div class = "content">
-                <img  class = "myPhoto" src="/images/profiley.jpg" alt="profile pic" width = "80%" height = "auto">
+                <img  class = "myPhoto" src="images/profiley.jpg" alt="profile pic" width = "80%" height = "auto">
                 <p class = "myPara">Hey !<br><br> I am a final-year BTech student with a strong foundation in computer science and engineering. My expertise lies in programming languages such as C++, where I have honed my skills in algorithm design and data structures. Additionally, I am proficient in web development technologies, including Html,Css and JavaScript, allowing me to create dynamic and responsive web applications.
                 <br><br>I'm
                 excited to bring my knowledge and energy to a
@@ -67,19 +67,19 @@
                 experts, and actively support the company's expansion.</p>
             </div>
             <div class = "right">
-                <img class = "shark" src="/images/underFish.png" alt="" width = "60%"> 
-                <img class = "octopus" src="/images/actopus.png" alt="sea animal" width = "50%" height = "auto">
+                <img class = "shark" src="images/underFish.png" alt="" width = "60%"> 
+                <img class = "octopus" src="images/actopus.png" alt="sea animal" width = "50%" height = "auto">
             </div>
             <div class = "skillBar">
                 <div class="skillSet">
                     <ul class = "skillList">
-                        <li><img src="/images/skillIcons/c.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/html.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/cpp1.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/css.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/git.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/js.png" alt="" width = "40%" height = "auto"></li>
-                        <li><img src="/images/skillIcons/github.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/c.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/html.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/cpp1.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/css.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/git.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/js.png" alt="" width = "40%" height = "auto"></li>
+                        <li><img src="images/skillIcons/github.png" alt="" width = "40%" height = "auto"></li>
                     </ul>
                 </div>
             </div>
@@ -93,35 +93,35 @@
                 <h1>Profiles</h1>
                 <div class="profileLinks">
                     <div class="one linkWrap">
-                        <img src="/images/linkIcons/leetcode.png" alt="" width = "10%">
+                        <img src="images/linkIcons/leetcode.png" alt="" width = "10%">
                         <a href="">Leetcode</a>
                     </div>
                     <div class="two linkWrap">
-                        <img src="/images/linkIcons/linkedin.png" alt="" width = "10%">
+                        <img src="images/linkIcons/linkedin.png" alt="" width = "10%">
                         <a href="">linkedin</a>
                     </div>
 
                     <div class="three linkWrap">
-                        <img src="/images/linkIcons/codechef.759x1024.png" alt="" width = "10%">
+                        <img src="images/linkIcons/codechef.759x1024.png" alt="" width = "10%">
                         <a href="">Codechef</a>
                     </div>
                     <div class="four linkWrap">
-                        <img src="/images/linkIcons/github.png" alt="" width = "10%">
+                        <img src="images/linkIcons/github.png" alt="" width = "10%">
                         <a href="">Github</a>
                     </div>
                     <div class="five linkWrap">
-                        <img src="/images/linkIcons/discord.png" alt="" width = "10%">
+                        <img src="images/linkIcons/discord.png" alt="" width = "10%">
                         <a href="">Discord</a>
                     </div>
                     <div class="six linkWrap">
-                        <img src="/images/linkIcons/instagram.png" alt="" width = "10%">
+                        <img src="images/linkIcons/instagram.png" alt="" width = "10%">
                         <a href="">Instagram</a>
                     </div>
                 </div>
 
                 <div class="resume">
                     <div class="mycv">
-                        <a href="" class = "cvButton">Resume <img class = "downloadIcon" src="/images/icons/download.png" alt=""></a>
+                        <a href="" class = "cvButton">Resume <img class = "downloadIcon" src="images/icons/download.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
             <div class="display">
                 <div class="laptop">
                     <div class="screen">
-                        <img src="/images/project/agroCart/home.PNG" alt="" width = "60%">
+                        <img src="images/project/agroCart/home.PNG" alt="" width = "60%">
                     </div>
                 </div>
             </div>
@@ -198,8 +198,8 @@
         <div class="follow">
             <h4>Follow me @</h4>
             <ul>
-                <li><a href=""><img src="/images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a></li>
-                <li><a href=""><img src="/images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a></li>
+                <li><a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a></li>
+                <li><a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a></li>
             </ul>
         </div>
     </footer>
