contact and footer modified

--- a/index.html
+++ b/index.html
@@ -147,50 +147,49 @@
 
         <!-- Projects -->
         <section class="project">
-            <h1>Projects</h1>
+            <h1>PROJECTS</h1>
 
         </section>
+
+    </main>
+
+    <footer class = "footer">
 
         <section class="contact">
             <h1>CONTACT ME</h1>
             <div class="contactEnvinonment">
-                <!-- <form class = "form" action="submit" method = "get">
-                    <div class = "formWrapper">
-                        <label for="name">Name </label>
-                        <input id = "name" type="text" required>
-                    </div>
-                    <div class = "formWrapper">
-                        <label for="gmail">Gmail</label>
-                        <input id = "gmail" type="text" required>
-                    </div>
-                    <div class = "formWrapper">
-                        <label for="mobileNumber">Phone No</label>
-                        <input id ="mobileNumber" type="text"  required>
-                    </div>
-                    <div class = "formWrapper">
-                        <label for="message">Message</label>
-                        <textarea name="Message" id="message" cols="20" rows="5"></textarea>
-                    </div>
-
-                    <div class = "formWrapper">
-                        <button type = "submit">Submit</button>
-                        <button type = "reset">Reset</button>
-                    </div>
-
-                </form> -->
-
-                <img src="images/snowMounain.png" alt="" width = "100%" height = "auto">
+                <form action="submit" method = "post">
+                    <label for="name">Name : </label>
+                    <input type="text" id="name" name = "Name" required>
+                    <label for="email">Email : </label>
+                    <input type="text" id = "email"  name = "Email" required>
+                    <label for="phone">Mobile No : </label>
+                    <input type="text" id = "phone">
+                    <label for="message">Message : </label>
+                    <textarea name="Message" id="message" cols="20" rows="5"></textarea>
+                    <button type = "reset">Reset</button>
+                    <button type = "submit">Submit</button>
+                </form>
             </div>
         </section>
 
-    </main>
-    <footer class = "footer">
-        <p>@2024 Designed and Developed By <span class = "dark"> PraveenSubramaniyam.</span></p>
-        <div class="follow">
-            <h4>Follow me @</h4>
-            <a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
-            <a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
+        <div class="foot">
+            <div class="greet">
+                <img class = "myPic" src="/images/profiley.jpg" alt="mypic">
+                <div class = "greetMessage">Thank you for visiting my profile. <br> Have a Great Day !! </div>
+
+            </div>
+
+            <p>@2024 Designed and Developed By <span class = "dark"> PraveenSubramaniyam.</span></p>
+
+            <div class="follow">
+                <h4>Follow me @</h4>
+                <a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
+                <a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
+            </div>
+            
         </div>
+        <img  class = "snowMountain" src="images/snowMounain.png" alt="" width = "100%" height = "auto">
     </footer>
 </body>
 </html>
