--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
                     <h1 class = "autoSpell">I'm <span id = "autoType"></span></h1>
                 </div>
 
-                <img class = "sea" src="images/sea.png" alt="sea" width = "100%" height="auto">
                 <div class="update"><span class = "dull" id = "lastUpdated"></span></div>
                 <div class="gmail">pravinsubramaniyam<span class = "dark">@gmail.com</span></div>
             </section>
+            <img class = "sea" src="images/sea.png" alt="sea" width = "100%" height="auto">
+
         </div>
     
 
@@ -110,6 +111,7 @@
             <div class="profileEnvironment">
 
                 <div class="myProfiles">
+                    
                     <div class="one linkWrap">
                         <img src="images/linkIcons/leetcode.png" alt="" width = "10%" height = "auto">
                         <a href="#">Leetcode</a>
@@ -137,7 +139,9 @@
                         <a href="#">Instagram</a>
                     </div>
                 </div>
+
                 <div class="title">
+
                     <div class="titleWraper">
                         <h1>PROFILES</h1>
                         <a href="" class = "cvButton" download="">Proposal</a>
@@ -157,9 +161,10 @@
         <section class="project" id = "projects">
             <div class="projectTitles">
                 <h1>PROJECTS</h1>
-                <div class="projectTitle agro">Agrocart</div>
-                <div class="projectTitle blog">Bloging Website</div>
-
+                <div class="titleWrapper">
+                    <div class="projectTitle agro">Agrocart</div>
+                    <div class="projectTitle blog">Bloging Website</div>
+                </div>
             </div>
 
             <div class="card">
@@ -179,6 +184,7 @@
 
                 <div class="techStack">
                     <h3>Tech Stack:</h3>
+
                     <div class="techImages">
 
                     </div>
@@ -215,10 +221,10 @@
     <div class="display"></div>
 
     <div class="sideBar">
-        <a href="#home"><img src="./images/sideBar/home.png" alt="" width = "100%"></a>
-        <a href="#about"><img src="./images/sideBar/about.png" alt="" width = "100%"></a>
-        <a href="#profiles"><img src="./images/sideBar/profiles.png" alt="" width = "100%"></a>
-        <a href="#projects"><img src="./images/sideBar/projects.png" alt="" width = "100%"></a>
+        <a href="#home"><img src="./images/sideBar/home.png" alt="back home button" width = "100%"></a>
+        <a href="#about"><img src="./images/sideBar/about.png" alt="back about button" width = "100%"></a>
+        <a href="#profiles"><img src="./images/sideBar/profiles.png" alt="back profiles button" width = "100%"></a>
+        <a href="#projects"><img src="./images/sideBar/projects.png" alt="back projects button" width = "100%"></a>
     </div>
 </body>
 </html>
