home page modified for mobile screen

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="profileEnvironment">
 
                 <div class="myProfiles">
-                    
+
                     <div class="one linkWrap">
                         <img src="images/linkIcons/leetcode.png" alt="" width = "10%" height = "auto">
                         <a href="#">Leetcode</a>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="six linkWrap">
                         <img src="images/linkIcons/instagram.png" alt="" width = "10%" height = "auto">
-                        <a href="#">Instagram</a>
+                        <a href="https://www.instagram.com/pravin.fl/" target = "_blank">Instagram</a>
                     </div>
                 </div>
 
