profile section style modified for mobile screen

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- profiles -->
 
         <section class="profiles" id = "profiles">
-
+            <h1>PROFILES</h1>
             <div class="profileEnvironment">
 
                 <div class="myProfiles">
@@ -139,7 +139,7 @@
                     </div>
                     <div class="six linkWrap">
                         <img src="images/linkIcons/instagram.png" alt="" width = "10%" height = "auto">
-                        <a href="https://www.instagram.com/pravin.fl/" target = "_blank">Instagram</a>
+                        <a href="https://www.instagram.com/pravin.fl/" target="blank">Instagram</a>
                     </div>
                 </div>
 
