profiles section modified

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <img src="images/about/skillSets/cpp.png" alt="cpp" width = "50%" height = "auto">
                             <img src="images/about/skillSets/js.png" alt="javascript" width = "50%" height = "auto">
                             <img src="images/about/skillSets/github.png" alt="github" width = "50%" height = "auto">
-                            <img src="images/about/skillSets/windows.png" alt="windows" width = "50%" height = "auto">
+                            <img src="images/about/skillSets/window.png" alt="windows" width = "50%" height = "auto">
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
         </div>
     </footer>
 
-    <div class="display"></div>
+    <!-- <div class="display"></div> -->
 
     <div class="sideBar">
         <a href="#home"><img src="./images/sideBar/home.png" alt="back home button" width = "100%"></a>
