mobile side bar modified

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav class="navBar">
 
             <h2 class = "logo"><span class = "logoFirstLetter">P</span>raveen.fl</h2>
-            <img  class = "showMenu" src="images/icons/menu.png" alt="..." width = "40px" height = "auto">
+            <img  class = "showMenuIcon" id = "menuShow" src="images/icons/menu.png" alt="..." width = "40px" height = "auto">
 
-            <ul class = "menuItems">
-                <li class = "hideMenu"><span class="material-symbols-outlined">close</span></li>
+            <ul class = "menuItems" id = "menuItem">
+                <li class = "hideMenuIcon" id = "hideMenu"><span class="material-symbols-outlined">close</span></li>
                 <li><a href="#about">ABOUT ME</a></li>
                 <li><a href="#profiles">PROFILES</a></li>
                 <li><a href="#projects">PROJECTS</a></li>
@@ -178,7 +178,6 @@
                         <img src="" alt="">
                     </div>
                     <h3></h3>
-
                 </div>
 
 
@@ -209,11 +208,14 @@
         <div class="follow">
 
             <div class="contactLinks">
-                <h4>Contact me @</h4>
-                <a href=""><img src="./images/linkIcons/whatsapp.png" alt="whatsapp icon" width = "100%" height = "auto"></a>
-                <a href="mailto:pravinsubramaniyam@gmail.com"><img src="./images/linkIcons/mail.png" alt="mail icon" width = "100%" height = "auto"></a>
-                <a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
-                <a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
+                <h4>Contact Me</h4>
+                <div class="contactLinkWrapper">
+                    <a href=""><img src="./images/linkIcons/whatsapp.png" alt="whatsapp icon" width = "100%" height = "auto"></a>
+                    <a href="mailto:pravinsubramaniyam@gmail.com"><img src="./images/linkIcons/mail.png" alt="mail icon" width = "100%" height = "auto"></a>
+                    <a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
+                    <a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
+                </div>
+
             </div>
         </div>
         <div class="endBanner">
