error fixed in html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
     </footer>
 
-    <div class="display"></div>
+    <!-- <div class="display"></div> -->
 
     <div class="sideBar">
         <a href="#home"><img src="./images/sideBar/home.png" alt="back home button" width = "100%"></a>
