loading page added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
+    <div class="loading">
+        <h1>Loading...</h1>
+    </div>
     <header class = "header">
         <nav class="navBar">
 
@@ -153,7 +156,6 @@
                 </div>
 
             </div>
-            <img  class = "kite" src="./images/kite.png" alt="" width = "10%">
             <img class = "icyMountain" src="images/mountain.png" alt="" width = "100%" height = "auto">
 
         </section>
