project section modified

--- a/index.html
+++ b/index.html
@@ -120,25 +120,25 @@
 
                     <div class="one linkWrap">
                         <img src="images/linkIcons/leetcode.png" alt="" width = "10%" height = "auto">
-                        <a href="#">Leetcode</a>
+                        <a href="https://leetcode.com/iampravin/">Leetcode</a>
                     </div>
 
                     <div class="two linkWrap">
                         <img src="images/linkIcons/linkedin.png" alt="" width = "10%" height = "auto">
-                        <a href="#">linkedin</a>
+                        <a href="https://www.linkedin.com/in/212it509/">linkedin</a>
                     </div>
 
                     <div class="three linkWrap">
                         <img src="images/linkIcons/codechef.759x1024.png" alt="" width = "10%" height = "auto">
-                        <a href="#">Codechef</a>
+                        <a href="https://www.codechef.com/users/baite_151">Codechef</a>
                     </div>
                     <div class="four linkWrap">
                         <img src="images/linkIcons/github.png" alt="" width = "10%" height = "auto">
-                        <a href="#">Github</a>
+                        <a href="https://github.com/iampravinsubramaniyam">Github</a>
                     </div>
                     <div class="five linkWrap">
                         <img src="images/linkIcons/discord.png" alt="" width = "10%" height = "auto">
-                        <a href="#">Discord</a>
+                        <a href="https://discord.gg/KyDWG8FD">Discord</a>
                     </div>
                     <div class="six linkWrap">
                         <img src="images/linkIcons/instagram.png" alt="" width = "10%" height = "auto">
@@ -150,7 +150,7 @@
 
                     <div class="titleWraper">
                         <h1>PROFILES</h1>
-                        <a href="" class = "cvButton" download="">Proposal</a>
+                        <a href="./resume/PRAVEEN S - IT.pdf" class = "cvButton" download="">Proposal</a>
                     </div>
 
                 </div>
@@ -177,7 +177,7 @@
                 <div class="heading">
 
                     <div class="projectLogo">
-                        <img src="" alt="">
+                        <img src="" alt="project Logo">
                     </div>
                     <h3></h3>
                 </div>
@@ -212,10 +212,10 @@
             <div class="contactLinks">
                 <h4>Contact Me</h4>
                 <div class="contactLinkWrapper">
-                    <a href=""><img src="./images/linkIcons/whatsapp.png" alt="whatsapp icon" width = "100%" height = "auto"></a>
+                    <a href="https://wa.me/+919384929320/"><img src="./images/linkIcons/whatsapp.png" alt="whatsapp icon" width = "100%" height = "auto"></a>
                     <a href="mailto:pravinsubramaniyam@gmail.com"><img src="./images/linkIcons/mail.png" alt="mail icon" width = "100%" height = "auto"></a>
-                    <a href=""><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
-                    <a href=""><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
+                    <a href="https://www.linkedin.com/in/212it509/"><img src="images/linkIcons/linkedin.png" alt="Linkedin icon" width = "100%" height = "auto"></a>
+                    <a href="https://www.instagram.com/pravin.fl/"><img src="images/linkIcons/instagram.png" alt="instagram icon" width = "100%" height = "auto"></a>
                 </div>
 
             </div>
