resume option added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
                 </div>
 
             </div>
+
+            <div class="myResume">
+                <div class="resumeContainer">
+                    <a id = "resume" href="./resume/PRAVEEN S - IT.pdf" download><img src="./images/about/bubble.png" alt=""></a>
+                    <p>cv</p>
+                </div>
+                <div class = "downloadMsg">Click&nbsp;me&nbsp;to&nbsp;download</div>
+            </div>
         </section>
 
           
