back to home button added

--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
         <div class="endBanner">
             <p>@2024 Designed and Developed By <span>PraveenSubramaniyam.</span></p>
         </div>
+
+        <div class="backHome">
+            <a href="#home"><img src="./images/sideBar/home.png" alt="" width = "40px"></a>
+        </div>
     </footer>
 
     <div class="display"></div>
