--- a/index.html
+++ b/index.html
@@ -244,7 +244,12 @@
             </div>
         </div>
         <div class="endBanner">
-            <p>@2024 Designed and Developed By <span>PraveenSubramaniyam.</span></p>
+            <p>@2024 Designed and Developed By  <span>PraveenSubramaniyam.</span></p>
+            <div class="endMsg">
+                <div class="design">@2024 Designed and Developed By </div>
+                <div class="name">PraveenSubramaniyam</div>
+            </div>
+
         </div>
 
         <div class="backHome">
