--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="myResume">
                 <div class="resumeContainer">
-                    <a id = "resume" href="./resume/PRAVEEN S - IT.pdf" download><img src="./images/about/bubble.png" alt=""></a>
+                    <a id = "resume" href="./resume/My Resume.pdf" download><img src="./images/about/bubble.png" alt=""></a>
                     <p>cv</p>
                 </div>
                 <div class = "downloadMsg">Click&nbsp;me&nbsp;to&nbsp;download</div>
